--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,17 +29,25 @@
     <string name="spinnerPrompt">Baslangıc Yılı</string>
     <string name="spinnerPrompt2">Bitis Yılı</string>
 
-    <string-array name="yillar">
-    <item>1900</item>
-    <item>1800</item>
-    <item>1700</item>
+    <string-array name="askerlik">
+        <item>Yapildi</item>
+        <item>Tecilli</item>
+        <item>Muaf</item>
+        <item></item>
 
-</string-array>
+    </string-array>
+    <string-array name="Ehliyet">
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+
+    </string-array>
 
     <string name="facebook_application_id" translatable="false">150345259107898</string>
     <!--<string name="fb_login_protocol_scheme">fb150345259107898</string>-->
     <string name="twitter_consumer_key" translatable="false">Ws8uStxg4hOiTfAjjB7FdyPoq</string>
     <string name="twitter_consumer_secret" translatable="false">mjD86fuxnn11HbJdaTtOmoWDTg5iTygx1bkW99Qf6tJocAvOA4</string>
+    <string name="tamam">Tamam</string>
 
 
 </resources>
