--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,34 @@
 
     </string-array>
 
+    <string-array name="Yillarim">
+        <item>2018</item>
+        <item>2017</item>
+        <item>2016</item>
+        <item>2015</item>
+        <item>2014</item>
+        <item>2013</item>
+        <item>2012</item>
+        <item>2011</item>
+        <item>2010</item>
+        <item>2009</item>
+        <item>2008</item>
+        <item>2007</item>
+        <item>2006</item>
+        <item>2005</item>
+        <item>2004</item>
+        <item>2003</item>
+        <item>2002</item>
+        <item>2001</item>
+        <item>2000</item>
+        <item>1999</item>
+        <item>1998</item>
+        <item>1997</item>
+        <item>1996</item>
+
+
+    </string-array>
+
     <string name="facebook_application_id" translatable="false">150345259107898</string>
     <!--<string name="fb_login_protocol_scheme">fb150345259107898</string>-->
     <string name="twitter_consumer_key" translatable="false">Ws8uStxg4hOiTfAjjB7FdyPoq</string>
